--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>ABA - Personal Portfolio</title>
 
   <!--
     - favicon
@@ -46,7 +46,8 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Abdallah Ben Abdallah">Abdallah Ben Abdallah</h1>
+          <h1 class="name" title="Abdallah">Abdallah</h1>
+          <h1 class="name" title="Ben Abdallah">Ben Abdallah</h1>
 
           <p class="title">Associate Professor</p>
         </div>
